--- a/10_14_Pandas_Tricks.ipynb
+++ b/10_14_Pandas_Tricks.ipynb
@@ -369,26 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Country                          object\n",
-       "beer_servings                     int64\n",
-       "spirit_servings                   int64\n",
-       "wine_servings                     int64\n",
-       "total_litres_of_pure_alcohol    float64\n",
-       "continent                        object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# select columns by data type\n",
     "drinks.dtypes"
@@ -426,26 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Country                           object\n",
-       "beer_servings                      int64\n",
-       "spirit_servings                    int64\n",
-       "wine_servings                      int64\n",
-       "total_litres_of_pure_alcohol     float64\n",
-       "continent                       category\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For continent: change its type object to type category (saves space)\n",
     "dtypes ={'continent':'category'}\n",
@@ -458,8 +424,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dealing with nans, % of nans in a column, split a string, pivot table, correlation heatmap\n",
-    "# https://www.youtube.com/watch?v=RlIiVeig3hc\n"
+    "# dealing with nans, % of nans in a column, split a string, pivot tables, correlation heatmap, aggregate functions (agg, mean(), group by)\n",
+    "# https://www.youtube.com/watch?v=RlIiVeig3hc\n",
+    "# https://www.youtube.com/watch?v=dPwLlJkSHLo"
    ]
   }
  ],
