--- a/10_14_Pandas_Tricks.ipynb
+++ b/10_14_Pandas_Tricks.ipynb
@@ -2073,6 +2073,393 @@
     "\n",
     "#We group by Gender and Name and calculate the cumulative sum of Age within the given Gender (it's what level=[0] does)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lag function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imagine you have a daily sales information and want to calculate how prices change on a daily basis\n",
+    "selling = [ [1, 3400, '2020-01-01', 52],[1, 3111, '2020-01-01', 110],[2, 1967, '2020-01-02', 351],\n",
+    "            [2, 3400, '2020-01-02', 9], [3, 3400, '2020-01-02', 14], [3, 3111, '2020-01-02', 66],\n",
+    "            [3, 1405, '2020-01-02', 103]]\n",
+    "selling_df = pd.DataFrame(selling, columns = ['seller_id','product_id','sale_date','sales_sum'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "seller_id     category\n",
+       "product_id    category\n",
+       "sale_date       object\n",
+       "sales_sum        int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_types = {'seller_id':'category','product_id':'category'}\n",
+    "selling_df.astype(dtype=cat_types).dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selling_df['sale_date'] = selling_df['sale_date'].astype('datetime64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "seller_id              int64\n",
+       "product_id             int64\n",
+       "sale_date     datetime64[ns]\n",
+       "sales_sum              int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selling_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seller_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>sales_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3111</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3111</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1405</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   seller_id  product_id  sale_date  sales_sum\n",
+       "0          1        3400 2020-01-01         52\n",
+       "1          1        3111 2020-01-01        110\n",
+       "2          2        1967 2020-01-02        351\n",
+       "3          2        3400 2020-01-02          9\n",
+       "4          3        3400 2020-01-02         14\n",
+       "5          3        3111 2020-01-02         66\n",
+       "6          3        1405 2020-01-02        103"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selling_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, we rolled up everything to the daily level\n",
+    "selling_df_daily = selling_df.groupby(by='sale_date')['sales_sum'].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>sales_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sale_date  sales_sum\n",
+       "0 2020-01-01        162\n",
+       "1 2020-01-02        543"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selling_df_daily"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second, we "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, let's group everything by sale_date and see how how the totals changed\n",
+    "selling_df['sales_sum_lagged'] = selling_df.sort_values(by=['sale_date'], ascending = True).groupby(by=['product_id'])['sales_sum'].shift(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seller_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>sales_sum</th>\n",
+       "      <th>sales_sum_lagged</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>52</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3111</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>110</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>351</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>9</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3111</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>66</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1405</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>103</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   seller_id  product_id  sale_date  sales_sum  sales_sum_lagged\n",
+       "0          1        3400 2020-01-01         52               NaN\n",
+       "1          1        3111 2020-01-01        110               NaN\n",
+       "2          2        1967 2020-01-02        351               NaN\n",
+       "3          2        3400 2020-01-02          9              52.0\n",
+       "4          3        3400 2020-01-02         14               9.0\n",
+       "5          3        3111 2020-01-02         66             110.0\n",
+       "6          3        1405 2020-01-02        103               NaN"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selling_df"
+   ]
   }
  ],
  "metadata": {
