--- a/10_14_Pandas_Tricks.ipynb
+++ b/10_14_Pandas_Tricks.ipynb
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2154,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2249,7 @@
        "6          3        1405 2020-01-02        103"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2260,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2319,7 @@
        "1 2020-01-02        543"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2340,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2392,7 @@
        "1 2020-01-02        543           162.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
        "1 2020-01-02        543           162.0       381.0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2478,18 +2478,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 64,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# First, let's group everything by sale_date and see how how the totals changed\n",
-    "selling_df['sales_sum_lagged'] = selling_df.sort_values(by=['sale_date'], ascending = True).groupby(by=['product_id'])['sales_sum'].shift(1)"
+    "#### SQL-like exercises"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add4add = [\n",
+    "    ['2018-03-15','impression',2353, 3436,0.15,np.nan,np.nan],\n",
+    "    ['2018-03-15','impression',2353, 3436,0.12,np.nan,np.nan],\n",
+    "    ['2018-03-15','impression',2353, 3436, 0.10,np.nan,np.nan],\n",
+    "    ['2018-03-15','click',1234,5678, np.nan, np.nan,np.nan],\n",
+    "    ['2018-03-15','create_ad', 1234, 5678 , np.nan, 6789,10],\n",
+    "    ['2018-03-16','impression',8765,8871,0.10,np.nan,np.nan],\n",
+    "    ['2018-03-16','impression',8765,8871,0.10,np.nan,np.nan],\n",
+    "    ['2018-03-16','impression',8765, 8871,0.2,np.nan,np.nan],\n",
+    "    ['2018-03-16','impression',8765,8871,0.23,np.nan,np.nan],\n",
+    "    ['2018-03-16','click',8765,8871, np.nan, np.nan,np.nan],\n",
+    "    ['2018-03-16','create_ad','8765',8871, np.nan, 6993,12] ]\n",
+    "\n",
+    "add4add_df = pd.DataFrame(add4add, columns = ['event_date','event','user_id','unit_id','cost','ad_id','spend'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "event_date     object\n",
+       "event          object\n",
+       "user_id        object\n",
+       "unit_id         int64\n",
+       "cost          float64\n",
+       "ad_id         float64\n",
+       "spend         float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add4add_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2513,92 +2559,164 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>seller_id</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>sale_date</th>\n",
-       "      <th>sales_sum</th>\n",
-       "      <th>sales_sum_lagged</th>\n",
+       "      <th>event_date</th>\n",
+       "      <th>event</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>unit_id</th>\n",
+       "      <th>cost</th>\n",
+       "      <th>ad_id</th>\n",
+       "      <th>spend</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3400</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>52</td>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>2353</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3111</td>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>110</td>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>2353</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1967</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>351</td>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>2353</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3400</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>9</td>\n",
-       "      <td>52.0</td>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>click</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>5678</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3400</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>14</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>create_ad</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>5678</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6789.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3111</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>66</td>\n",
-       "      <td>110.0</td>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>8765</td>\n",
+       "      <td>8871</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1405</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>103</td>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>8765</td>\n",
+       "      <td>8871</td>\n",
+       "      <td>0.10</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>8765</td>\n",
+       "      <td>8871</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>impression</td>\n",
+       "      <td>8765</td>\n",
+       "      <td>8871</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>click</td>\n",
+       "      <td>8765</td>\n",
+       "      <td>8871</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>create_ad</td>\n",
+       "      <td>8765</td>\n",
+       "      <td>8871</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6993.0</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   seller_id  product_id  sale_date  sales_sum  sales_sum_lagged\n",
-       "0          1        3400 2020-01-01         52               NaN\n",
-       "1          1        3111 2020-01-01        110               NaN\n",
-       "2          2        1967 2020-01-02        351               NaN\n",
-       "3          2        3400 2020-01-02          9              52.0\n",
-       "4          3        3400 2020-01-02         14               9.0\n",
-       "5          3        3111 2020-01-02         66             110.0\n",
-       "6          3        1405 2020-01-02        103               NaN"
+       "   event_date       event user_id unit_id  cost   ad_id  spend\n",
+       "0  2018-03-15  impression    2353    3436  0.15     NaN    NaN\n",
+       "1  2018-03-15  impression    2353    3436  0.12     NaN    NaN\n",
+       "2  2018-03-15  impression    2353    3436  0.10     NaN    NaN\n",
+       "3  2018-03-15       click    1234    5678   NaN     NaN    NaN\n",
+       "4  2018-03-15   create_ad    1234    5678   NaN  6789.0   10.0\n",
+       "5  2018-03-16  impression    8765    8871  0.10     NaN    NaN\n",
+       "6  2018-03-16  impression    8765    8871  0.10     NaN    NaN\n",
+       "7  2018-03-16  impression    8765    8871  0.20     NaN    NaN\n",
+       "8  2018-03-16  impression    8765    8871  0.23     NaN    NaN\n",
+       "9  2018-03-16       click    8765    8871   NaN     NaN    NaN\n",
+       "10 2018-03-16   create_ad    8765    8871   NaN  6993.0   12.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selling_df"
+    "add4add_df['event_date'] = add4add_df['event_date'].astype('datetime64')\n",
+    "cat_types = {'event':'category','user_id':'category', 'unit_id':'category'}\n",
+    "add4add_df.astype(dtype=cat_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The question is to count the average number of impressions we need to show before a user will create an add\n",
+    "# In other words, we need to count 'impression' for every user_id and unit_id where we have 'create_ad' at the end\n"
    ]
   }
  ],
