--- a/10_14_Pandas_Tricks.ipynb
+++ b/10_14_Pandas_Tricks.ipynb
@@ -2715,6 +2715,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add the country table next and do the first simple question "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# The question is to count the average number of impressions we need to show before a user will create an add\n",
     "# In other words, we need to count 'impression' for every user_id and unit_id where we have 'create_ad' at the end\n"
    ]
