--- a/10_14_Pandas_Tricks.ipynb
+++ b/10_14_Pandas_Tricks.ipynb
@@ -2715,7 +2715,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add the country table next and do the first simple question "
+    "# add the country table next and do the first simple question \n",
+    "\n"
    ]
   },
   {
